Update copyright profile, and code cleanup.